--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "homepage": "https://github.com/cuyaproductions/story-collab#readme",
   "dependencies": {
     "express": "^4.14.0",
-    "websocket": "^1.0.23"
+    "socket.io": "^1.5.0"
   }
 }
