--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/cuyaproductions/story-collab#readme",
   "dependencies": {
     "express": "^4.14.0",
+    "firebase": "^3.5.1",
     "websocket": "^1.0.23"
   }
 }
