--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/cuyaproductions/story-collab#readme",
   "dependencies": {
+    "ejs": "^2.5.2",
     "express": "^4.14.0",
     "firebase": "^3.5.1",
     "socket.io": "^1.5.0"
