--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "node index.js & webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,19 @@
   },
   "homepage": "https://github.com/cuyaproductions/story-collab#readme",
   "dependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "firebase": "^3.5.1",
-    "socket.io": "^1.5.0"
+    "socket.io": "^1.5.0",
+    "webpack": "^1.13.2"
+  },
+  "devDependencies": {
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-router": "^2.8.1"
   }
 }
