--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "webpack": "^1.13.2"
   },
   "devDependencies": {
+    "axios": "^0.15.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "socket.io-client": "^1.5.0"
   }
 }
